# teel-bridge

./: CMakeLists.txt  sdkconfig.old
main/: CMakeLists.txt  Device.cpp  idf_component.yml  main.cpp
main/include/: Device.h
model/: BUILD.gn  bridge-app.matter  bridge-app.zap  contact-sensor-app.zap
